--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -60,8 +60,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   color: #606c71;
-  background-color: #ff8982;
-  background-image: linear-gradient(120deg, #7d06c4 , #ff8982); }
+ }
 
 a {
   color: #1e6bb8;
@@ -247,8 +246,7 @@ padding: 10px;
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #ff8982;
-  background-image: linear-gradient(120deg, #7d06c4 , #ff8982); }
+}
 
 
 /*Media Queries*/
