--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -128,10 +128,8 @@ h3 {
   }
   .btn {
     display: inline-block;
-    margin-bottom: 1rem;
-    color: rgba(255, 255, 255, 0.7);
-    background-color: rgba(255, 255, 255, 0.08);
-    border-color: rgba(255, 255, 255, 0.21);
+    color: #007F5E;
+    text-decoration: none;
     border-style: solid;
     border-width: 1px;
     border-radius: 0.3rem;
