Mail Chimp to footer

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -262,7 +262,8 @@ h3 {
   .site-footer {
     padding-top: 2rem;
     margin-top: 2rem;
-    border-top: solid 1px #eff0f1; }
+    border-top: solid 1px #eff0f1;
+    background: blue; }
 
   .site-footer-owner {
     display: block;
