--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -282,7 +282,7 @@ h3 {
     bottom: -20px;
   }
 
-  #mc_embed_signup {background:#DFF8FF;}
+  .e-mailSignup {background:#DFF8FF;}
 
 /*Media Queries*/
 
