--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -53,13 +53,14 @@ html, body {
   box-sizing: border-box; }
 
 body {
-  padding: 20px;
   margin: 0;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   color: #606c71;
  }
+
+main {padding:20px;}
 
 ul {
   list-style-type: none;
