--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -271,6 +271,7 @@ h3 {
     padding-top: 2rem;
     margin-top: 2rem;
     border-top: solid 1px #eff0f1;
+    background-color: #DFF8FF; 
 }
 
   .site-footer-owner {
