--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,53 +1,3 @@
-/*START navbar magic*/
-
-html, body {
-}
-
-.navbar-fixed {
-    top: 0;
-    z-index: 100;
-  position: fixed;
-    width: 100%;
-}
-
-#body_div {
-  top: 0;
-  position: relative;
-    height: 200px;
-    background-color: green;
-}
-
-#banner {
-  width: 100%;
-  height: 273px;
-    background-color: gray;
-  overflow: hidden;
-}
-
-#nav_bar {
-  border: 0;
-  background-color: #202020;
-  border-radius: 0px;
-  margin-bottom: 0;
-    height: 30px;
-}
-
-.nav_links {
-    margin: 0;
-}
-
-.nav_links li {
-  display: inline-block;
-    margin-top: 4px;
-}
-.nav_links li a {
-  padding: 0 15.5px;
-  color: #3498db;
-  text-decoration: none;
-}
-
-/*END navbar magic*/
-
 
 * {
   box-sizing: border-box; }
@@ -62,7 +12,7 @@ body {
   color: #606c71;
  }
 
-main {padding:20px;}
+main {padding: 20px;}
 
 ul {
   list-style-type: none;
@@ -154,6 +104,7 @@ h3 {
     color: #fff;
     text-align: center;
     background-color: white;
+    padding: 20px;
   }
 
   .project-tagline {
@@ -274,86 +225,4 @@ h3 {
     background-color: #DFF8FF; 
 }
 
-  .site-footer-owner {
-    display: block;
-    font-weight: bold; }
 
-  .site-footer-credits {
-    color: #819198; }
-
-  .spotify {
-    position: fixed;
-    right: 0px;
-    bottom: -20px;
-  }
-
-/*Media Queries*/
-
-@media screen and (min-width: 64em) {
-  .page-header {
-    padding: 5rem 6rem;
-    height:280px; }
-  .project-name {
-    font-size: 3.25rem; }
-  .main-content {
-    max-width: 64rem;
-    padding: 2rem 4rem;
-    margin: 0 auto;
-    font-size: 1.1rem; }
-  .site-footer {
-    font-size: 1rem; }
-  .btn {
-    padding: 0.75rem 1rem; }
-  }
-
-@media screen and (min-width: 42em) and (max-width: 64em) {
-  .page-header {
-    padding: 3rem 4rem;
-    height:160px; }
-  .project-name {
-    font-size: 2.25rem; }
-  .main-content {
-    padding: 2rem 4rem;
-    font-size: 1.1rem; }
-  .site-footer {
-    font-size: 1rem; }
-  .btn {
-    padding: 0.6rem 0.9rem;
-    font-size: 0.9rem; }
-  }
-
-@media screen and (max-width: 42em) {
-  .page-header {
-    padding: 2rem 1rem;
-    height:110px; }
-  .project-name {
-    margin-top: 0;
-    margin-bottom: 0.1rem;
-    font-size: 1.75rem; } 
-  .main-content {
-    padding: 2rem 1rem;
-    font-size: 1rem; }
-  .site-footer {
-    font-size: 0.9rem; }
-  .btn {
-    display: block;
-    width: 100%;
-    padding: 0.75rem;
-    font-size: 0.9rem; }
-  .btn + .btn {
-      margin-top: 1rem;
-      margin-left: 0; } 
-  }
-  @media (min-width: 801px) {
-  .gcal {
-    visibility: visible;}
-  }
-  @media (max-width: 800px) {
-  .gcal {
-    visibility: hidden;
-    width:0;
-    height: 0;}
-  }
-
-
-/*End of Media Queries*/
