--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -38,6 +38,7 @@ img {
 
 h1 {
   text-align: center;
+  font: green;
 }
 h3 {
   font-size:1.5em;o
@@ -101,7 +102,6 @@ h3 {
     border-color: rgba(255, 255, 255, 0.3); }
 
   .page-header {
-    color: #fff;
     text-align: center;
     background-color: white;
     padding: 20px;
