--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -93,7 +93,10 @@ h3 {
     border-radius: 0.3rem;
     transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
     .btn + .btn {
-      margin-left: 1rem; }
+    margin-left: 1rem;
+    padding: 15px;
+    background-color: #fff;
+           }
 
   .btn:hover {
     color: rgba(255, 255, 255, 0.8);
