--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -91,11 +91,13 @@ h3 {
     border-style: solid;
     border-width: 1px;
     border-radius: 0.3rem;
-    transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
-    .btn + .btn {
-    margin-left: 1rem;
+    transition: color 0.2s, background-color 0.2s, border-color 0.2s;
     padding: 15px;
     background-color: #fff;
+  }
+    
+.btn + .btn {
+    margin-left: 1rem;
            }
 
   .btn:hover {
