--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -44,7 +44,6 @@ h3 {
   line-height:3;
 }
 
-
   .width50 {width:50%;}
   .strong {font-weight:bold;}
   .larger {font-size:150%;}
@@ -93,6 +92,9 @@ h3 {
     transition: color 0.2s, background-color 0.2s, border-color 0.2s;
     padding: 15px;
     background-color: #fff;
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
   }
     
 .btn + .btn {
