--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -234,6 +234,10 @@ h3 {
     background-color: #eff0f1;
     border: 0; }
 
+  #no-spam {
+    color:rgba(255, 255, 255, 0.7);
+  }
+
   .site-footer {
     padding-top: 2rem;
     margin-top: 2rem;
