--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -251,7 +251,7 @@ h3 {
 }
 
 @media only screen and (min-width: 769px) {
-    img {
+    img:not#banner {
       max-width: 50%;
       padding:20px;
     }
