--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -54,3 +54,17 @@ footer {
   background: #A86118;
   width: 100%;
 }
+
+.container {
+  max-width: 750px;
+  margin: 0 auto;
+}
+
+/*xs (for phones - screens less than 768px wide)
+
+sm (for tablets - screens equal to or greater than 768px wide)
+
+md (for small laptops - screens equal to or greater than 992px wide)
+
+lg (for laptops and desktops - screens equal to or greater than 1200px wide)*/
+
