--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -23,6 +23,11 @@ nav {
   color: #636363;
   background: none;
 }
+
+#nav-logo {
+  float:right;
+  height: 60px;
+  margin-top: 15px;
 }
 
 body {
@@ -80,6 +85,7 @@ footer {
 .container {
   max-width: 750px;
   margin: 0 auto;
+  clear: both;
 }
 
 .left, .right {
