--- a/CSS/pushy.css
+++ b/CSS/pushy.css
@@ -195,3 +195,12 @@
 }
 
 /*# sourceMappingURL=pushy.css.map */
+
+.nav-dropdown {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
