--- a/CSS/pushy.css
+++ b/CSS/pushy.css
@@ -196,11 +196,13 @@
 
 /*# sourceMappingURL=pushy.css.map */
 
-.nav-dropdown {
-  border: solid black;
+#nav-dropdown {
+  border: solid rgb(140, 140, 140);
+  margin: 5px;
   border-width: 0 3px 3px 0;
   display: inline-block;
   padding: 3px;
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
+  float: right;
 }
