push some things

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -26,13 +26,20 @@ nav {
 
 #nav-logo {
   float:right;
-  height: 60px;
-  margin-top: 15px;
+  height: 50px;
+  margin-top: 17px;
+}
+
+#nav-title {
+  display: inline-block;
+  color: #505050;
+  font-size: 20pt;
+  margin: 20px;
 }
 
 body {
   margin: 0;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', Helvetica, sans-serif;
   font-size: 16px;
   line-height: 1.5;
  }
@@ -57,11 +64,13 @@ img {
 
 h1, h2, h3, h4 {
   display: inline-block;
+  font-family: 'KoHo', Helvetica, sans-serif;
 }
 
 h1 {
-  display: inline-block;
-  color: green;
+  display: block;
+  color: #505050;
+  text-align: center;
 }
 h3 {
   font-size:1.5em;o
@@ -86,6 +95,7 @@ footer {
   max-width: 750px;
   margin: 0 auto;
   clear: both;
+  background: #FFFEFB;
 }
 
 .left, .right {
