--- a/CSS/global.css
+++ b/CSS/global.css
@@ -2,4 +2,5 @@
 @import url("styles.css");
 @import url("pushy.css");
 @import url("mailchimp.css");
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=KoHo');
