--- a/CSS/global.css
+++ b/CSS/global.css
@@ -4,3 +4,5 @@
 @import url("mailchimp.css");
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import url('https://fonts.googleapis.com/css?family=KoHo');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display');
+
