--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,6 +7,7 @@ html {background-color:#E3FCD2;}
 nav {
   text-align: center;
   background: white;
+  font-weight: 300;
 }
 
 .nav-wrapper {
@@ -74,7 +75,23 @@ h3 {
 
 p {
   font-family: 'Open Sans', Helvetica, sans-serif;
-  padding-left: 20px;
+  padding: 20px 15px 0 25px;
+}
+
+.body-sm, .body-md {
+  margin: 0;
+}
+
+.body-sm {
+  font-size:11pt;
+  line-height: 1.5;
+  color: grey;
+}
+
+.body-md {
+  font-size: 13pt;
+  line-height: 1.9;
+  color: rgb(84, 84, 84);
 }
 
 hr {
@@ -82,6 +99,10 @@ hr {
     height: 0;
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.twenty-pad {
+  padding-bottom: 20px;
 }
 
 blockquote {
@@ -158,7 +179,7 @@ footer {
 }
 
 .copy-block {
-  padding: 14% 0;
+  padding-top: 5%;
 }
 
 .icons {
