--- a/CSS/mailchimp.css
+++ b/CSS/mailchimp.css
@@ -4,7 +4,31 @@ Adapted from: http://blog.heyimcat.com/universal-signup-form/ */
 #mc_embed_signup{ padding-bottom: 15px; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
 #mc_embed_signup form {text-align:center; padding:10px 0 10px 0;}
 .mc-field-group { display: inline-block; } /* positions input field horizontally */
-#mc_embed_signup input.email {font-family:"Open Sans","Helvetica Neue",Arial,Helvetica,Verdana,sans-serif; font-size: 15px; border: 0 solid #ABB0B2;  -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; color: #343434; box-sizing:border-box; height:32px; padding: 0px 0.4em; display: inline-block; margin: 0; width:350px; vertical-align:top;}
+#mc_embed_signup input.email {
+	font-family:"Open Sans","Helvetica Neue",Arial,Helvetica,Verdana,sans-serif;
+	font-size: 15px;
+	border: 0 solid #ABB0B2;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	color: #343434;
+	box-sizing:border-box;
+	height:32px;
+	padding: 0px 0.4em;
+	display: inline-block;
+	margin: 0;
+	width:350px;
+	vertical-align:top;
+	background: none;
+	border-radius: 0;
+	border-bottom: 1.5px solid rgb(65, 65, 65);
+}
+
+#mc_embed_signup input.email::-webkit-input-placeholder, #mc_embed_signup input.email::-moz-placeholder ,#mc_embed_signup input.email::-ms-input-placeholder ,#mc_embed_signup input.email::-moz-placeholder
+{ 
+  color: pink;
+}
+
 #mc_embed_signup label {display:block; font-size:18px; padding-bottom:10px; font-weight:bold;color: white;}
 #mc_embed_signup .clear {display: inline-block;} /* positions button horizontally in line with input */
 #mc_embed_signup .button {font-size: 13px; border: none; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; letter-spacing: .03em; color: #000;
