--- a/CSS/pushy.css
+++ b/CSS/pushy.css
@@ -19,6 +19,7 @@
   color: #5B5B5B;
   padding: 15px 30px;
   text-decoration: none;
+  font-family: 'Open Sans', Helvetica, sans-serif;
 }
 .pushy a:hover {
   color: #a3a2a2;
