push deep-dive pages

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,6 +8,21 @@ nav {
   text-align: center;
   background: white;
   font-weight: 300;
+  height: 75px;
+}
+
+strong, b {
+  font-weight: bolder;
+}
+
+.nav-fixed {
+  position: fixed;
+  width: 100%;
+}
+
+.nav-spacer {
+  display: block;
+  height: 75px;
 }
 
 .clear {
@@ -41,6 +56,15 @@ nav {
   color: #505050;
   font-size: 20pt;
   margin: 20px;
+}
+
+
+.page-anchor {
+  height: 75px;
+  display: block;
+  position: relative;
+  width: 0;
+  margin-top: -75px;
 }
 
 body {
@@ -88,7 +112,13 @@ a:hover {
 
 p {
   font-family: 'Open Sans', Helvetica, sans-serif;
-  padding: 20px 15px 0 25px;
+  padding: 20px 15px 15px 25px;
+  margin: 0;
+}
+
+ul {
+  font-family: 'Open Sans', Helvetica, sans-serif;
+  list-style-type: circle;
 }
 
 .hero-banner {
