--- a/CSS/global.css
+++ b/CSS/global.css
@@ -1,7 +1,7 @@
-@import url("normalize.css");
-@import url("styles.css");
-@import url("pushy.css");
-@import url("mailchimp.css");
+@import url("../CSS/normalize.css");
+@import url("../CSS/styles.css");
+@import url("../CSS/pushy.css");
+@import url("../CSS/mailchimp.css");
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import url('https://fonts.googleapis.com/css?family=KoHo');
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display');
