padding fix, navbar shadow

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -13,7 +13,10 @@ nav {
   height: 75px;
   z-index: 999;
 /*  background: #e1fff7;
-*/}
+*/
+
+  box-shadow: rgba(0, 0, 0, 0.0470588) 0px 3px 5px -1px, rgba(0, 0, 0, 0.0666667) 0px 5px 8px 0px, rgba(0, 0, 0, 0.0588235) 0px 1px 14px 0px;
+}
 
 strong, b {
   font-weight: bolder;
@@ -340,13 +343,13 @@ footer {
 }
 
 .row.threecol-wrapper, #systems .row {
-  display: inline-flex;
+  display: flex;
 /*  margin-bottom: -4px;
 */  clear: both;
 }
 
 .sidebyside .row {
-  display: inline-flex;
+  display: flex;
   clear: both;
 }
 
