--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -294,7 +294,7 @@ button#lets-chat:hover {
 .float-left {float:left;}
 
 footer {
-  background: #A86118;
+  background: #bd8f5e;
   width: 100%;
   clear: both;
 }
