--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,13 +8,10 @@ html {
 
 nav {
   text-align: center;
-  background: white;
+  background: #FBF7F4;
   font-weight: 300;
   height: 75px;
   z-index: 999;
-/*  background: #e1fff7;
-*/
-
   box-shadow: rgba(0, 0, 0, 0.0470588) 0px 3px 5px -1px, rgba(0, 0, 0, 0.0666667) 0px 5px 8px 0px, rgba(0, 0, 0, 0.0588235) 0px 1px 14px 0px;
 }
 
@@ -76,6 +73,7 @@ strong, b {
 
 body {
   margin: 0;
+  background: rgb(72, 72, 74);
  }
 
 main {
@@ -170,18 +168,17 @@ p {
 
 .body-sm, .body-md {
   margin: 0;
+  color: rgb(51, 51, 51);
 }
 
 .body-sm {
   font-size:11pt;
   line-height: 1.5;
-  color: grey;
 }
 
 .body-md {
   font-size: 13pt;
   line-height: 1.6;
-  color: rgb(84, 84, 84);
 }
 
 hr {
@@ -294,7 +291,7 @@ button#lets-chat:hover {
 .float-left {float:left;}
 
 footer {
-  background: #bd8f5e;
+  background: #73655b;
   width: 100%;
   clear: both;
 }
@@ -303,7 +300,7 @@ footer {
   max-width: 750px;
   margin: 0 auto;
   clear: both;
-  background: #FFFEFB;
+  background: #FBF7F4;
 }
 
 .banner {
@@ -354,7 +351,7 @@ footer {
 }
 
 .column {
-  background:rgba(245, 239, 255, 0.46);
+  background:#FBF7F4;
 }
 
 /* Clear floats after the columns */
