--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -232,7 +232,7 @@ blockquote {
   margin: 15px;
   color: #4c4c4c;
   position: absolute;
-  bottom:5px;
+  bottom:0;
   right: 0;
   border: 2px solid #15868E;
 }
@@ -315,8 +315,9 @@ footer {
 }
 
 .three-column {
-    float: left;
-    width: 33.33%;
+  width: 33.33%;
+  max-width: 350px;
+  margin: 0 auto;
 }
 
 .copy-block {
@@ -560,7 +561,9 @@ lg (for laptops and desktops - screens equal to or greater than 1200px wide)*/
 
   button.learn-more {
     position: relative;
-    margin: 0 5px 0 0;
+    margin: 10px 5px 0 0;
+    padding: 12px;
+    font-size: 10pt;
   }
 }
 
@@ -578,10 +581,6 @@ lg (for laptops and desktops - screens equal to or greater than 1200px wide)*/
 
 @media screen and (max-width: 550px) {
 
-  .body-md {
-    font-size: 11pt;
-    line-height: 1.3;
-  }
   #nav-title {
     font-size: 14pt;
   }
@@ -589,12 +588,24 @@ lg (for laptops and desktops - screens equal to or greater than 1200px wide)*/
   p {
     font-size: 11pt;
   }
+
+  .three-column {
+    width: 100%;
+  }
+
+  .row.threecol-wrapper {
+    display: block;
+  }
 }
 
 @media screen and (max-width: 500px) {
 
+  .body-md {
+    font-size: 11.5pt;
+  }
+
   #nav-title {
-    margin-left: -35px;
+    margin-left: -19px;
   }
 
   nav {
@@ -611,5 +622,48 @@ lg (for laptops and desktops - screens equal to or greater than 1200px wide)*/
   .menu-btn {
     font-size: 30pt;
 
+  }
+
+  .banner {
+    padding: 30px 10px 0;
+  }
+
+  blockquote {
+    padding: 0;
+    font-size:13pt;
+  }
+
+  .quote-citation {
+    font-size:12pt;
+  }
+
+  .copy-block p {
+    padding:5px 5px 0 10px;
+  }
+}
+@media screen and (max-width: 400px) {
+
+.menu-btn {
+  font-size:25pt;
+  margin: 4px 0;
+}
+
+#nav-title {
+    font-size:12pt;
+  }
+
+button.bottom-nav {
+    margin: 5px;
+    font-size: 11pt;
+}
+
+.body-md {
+    font-size:10.5pt;
+    line-height: 1.3;
+  }
+
+.three-column {
+    margin: 0 auto;
+    width: 300px;
   }
 }
