--- a/CSS/global.css
+++ b/CSS/global.css
@@ -3,6 +3,6 @@
 @import url("../CSS/pushy.css");
 @import url("../CSS/mailchimp.css");
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
-@import url('https://fonts.googleapis.com/css?family=KoHo');
+@import url('https://fonts.googleapis.com/css?family=KoHo:300,400,500,600,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display');
 
