--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -299,7 +299,7 @@ button#lets-chat:hover {
 .float-left {float:left;}
 
 footer {
-  background: #73655b;
+  background: black;
   width: 100%;
   clear: both;
 }
