--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,10 +4,8 @@
 
 html {
 
-  background:#e5e9ef;
-  /* background: #594d56; */
-/*  background: rgb(237, 237, 237);
-*//*background-color:#E3FCD2;*/}
+  background:black;
+}
 
 nav {
   text-align: center;
