--- a/CSS/global.css
+++ b/CSS/global.css
@@ -1,5 +1,5 @@
 @import url("../CSS/normalize.css");
-@import url("../CSS/styles.css");
+@import url("../CSS/styles.css?v2");
 @import url("../CSS/pushy.css");
 @import url("../CSS/mailchimp.css");
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
