--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -265,6 +265,7 @@ button.bottom-nav {
   background: #D8FFF5;
   padding: 15px;
   margin: 15px 0;
+    border-radius:50px;
 }
 
 button.bottom-nav a {
