--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -302,7 +302,7 @@ button#lets-chat:hover {
 .float-left {float:left;}
 
 footer {
-  background: #5d3a10k;
+  background: #5d3a10;
   width: 100%;
   clear: both;
 }
