--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,7 +8,7 @@ background: #a2a2a2;
 
 nav {
   text-align: center;
-  background: white;
+  background: #e0f5ff;
 /*  background: #FBF7F4;
 */  font-weight: 300;
   height: 75px;
