learn more button fix

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -237,9 +237,8 @@ blockquote {
   padding: 15px;
   margin: 15px;
   color: #00c0d4;
-  position: absolute;
-  bottom:0;
-  right: 0;
+  position: relative;
+  left:30%;
      border: 0;
      font-size:20px;
 /*  border: 2px solid #15868E;*/
