--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -243,6 +243,7 @@ blockquote {
     font-size:20px;
     box-shadow: 5px 5px 5px #99999985;
     border: 1px solid #8a8a8a;
+    border-radius: 10px;
 }
 }
 
