--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -242,7 +242,7 @@ blockquote {
     border: 0;
     font-size:20px;
     box-shadow: 5px 5px 5px #99999985;
-    border: 1px solid #8a8a8a;
+    border: 1px solid #d4d4d4;
     border-radius: 10px;
 }
 }
